@@ -107,7 +107,7 @@ end_include
 
 begin_enum
 enum|enum
-DECL|enum|__anon287c1f230103
+DECL|enum|__anon28c4ebea0103
 block|{
 DECL|enumerator|PROP_0
 name|PROP_0
@@ -188,12 +188,9 @@ name|GimpUIConfigurer
 modifier|*
 name|ui_configurer
 parameter_list|,
-name|GimpDockColumns
+name|GimpImageWindow
 modifier|*
-name|dock_columns
-parameter_list|,
-name|gboolean
-name|only_toolbox
+name|uber_image_window
 parameter_list|)
 function_decl|;
 end_function_decl
@@ -556,19 +553,151 @@ end_function
 begin_function
 specifier|static
 name|void
-DECL|function|gimp_ui_configurer_move_docks_to_columns (GimpUIConfigurer * ui_configurer,GimpDockColumns * dock_columns,gboolean only_toolbox)
+DECL|function|gimp_ui_configurer_get_window_center_pos (GtkWindow * window,gint * out_x,gint * out_y)
+name|gimp_ui_configurer_get_window_center_pos
+parameter_list|(
+name|GtkWindow
+modifier|*
+name|window
+parameter_list|,
+name|gint
+modifier|*
+name|out_x
+parameter_list|,
+name|gint
+modifier|*
+name|out_y
+parameter_list|)
+block|{
+name|gint
+name|x
+decl_stmt|,
+name|y
+decl_stmt|,
+name|w
+decl_stmt|,
+name|h
+decl_stmt|;
+name|gtk_window_get_position
+argument_list|(
+name|window
+argument_list|,
+operator|&
+name|x
+argument_list|,
+operator|&
+name|y
+argument_list|)
+expr_stmt|;
+name|gtk_window_get_size
+argument_list|(
+name|window
+argument_list|,
+operator|&
+name|w
+argument_list|,
+operator|&
+name|h
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|out_x
+condition|)
+operator|*
+name|out_x
+operator|=
+name|x
+operator|+
+name|w
+operator|/
+literal|2
+expr_stmt|;
+if|if
+condition|(
+name|out_y
+condition|)
+operator|*
+name|out_y
+operator|=
+name|y
+operator|+
+name|h
+operator|/
+literal|2
+expr_stmt|;
+block|}
+end_function
+
+begin_comment
+comment|/**  * gimp_ui_configurer_get_relative_window_pos:  * @window_a:  * @window_b:  *  * Returns: At what side @window_b is relative to @window_a. Either  * GIMP_ALIGN_LEFT or GIMP_ALIGN_RIGHT.  **/
+end_comment
+
+begin_function
+specifier|static
+name|GimpAlignmentType
+DECL|function|gimp_ui_configurer_get_relative_window_pos (GtkWindow * window_a,GtkWindow * window_b)
+name|gimp_ui_configurer_get_relative_window_pos
+parameter_list|(
+name|GtkWindow
+modifier|*
+name|window_a
+parameter_list|,
+name|GtkWindow
+modifier|*
+name|window_b
+parameter_list|)
+block|{
+name|gint
+name|a_x
+decl_stmt|,
+name|b_x
+decl_stmt|;
+name|gimp_ui_configurer_get_window_center_pos
+argument_list|(
+name|window_a
+argument_list|,
+operator|&
+name|a_x
+argument_list|,
+name|NULL
+argument_list|)
+expr_stmt|;
+name|gimp_ui_configurer_get_window_center_pos
+argument_list|(
+name|window_b
+argument_list|,
+operator|&
+name|b_x
+argument_list|,
+name|NULL
+argument_list|)
+expr_stmt|;
+return|return
+name|b_x
+operator|<
+name|a_x
+condition|?
+name|GIMP_ALIGN_LEFT
+else|:
+name|GIMP_ALIGN_RIGHT
+return|;
+block|}
+end_function
+
+begin_function
+specifier|static
+name|void
+DECL|function|gimp_ui_configurer_move_docks_to_columns (GimpUIConfigurer * ui_configurer,GimpImageWindow * uber_image_window)
 name|gimp_ui_configurer_move_docks_to_columns
 parameter_list|(
 name|GimpUIConfigurer
 modifier|*
 name|ui_configurer
 parameter_list|,
-name|GimpDockColumns
+name|GimpImageWindow
 modifier|*
-name|dock_columns
-parameter_list|,
-name|gboolean
-name|only_toolbox
+name|uber_image_window
 parameter_list|)
 block|{
 name|GList
@@ -612,26 +741,22 @@ block|{
 name|GimpDockWindow
 modifier|*
 name|dock_window
-init|=
-name|NULL
 decl_stmt|;
 name|GimpDockContainer
 modifier|*
 name|dock_container
-init|=
-name|NULL
+decl_stmt|;
+name|GimpDockColumns
+modifier|*
+name|dock_columns
 decl_stmt|;
 name|GList
 modifier|*
 name|docks
-init|=
-name|NULL
 decl_stmt|;
 name|GList
 modifier|*
 name|dock_iter
-init|=
-name|NULL
 decl_stmt|;
 if|if
 condition|(
@@ -651,6 +776,39 @@ argument_list|(
 name|dialog_iter
 operator|->
 name|data
+argument_list|)
+expr_stmt|;
+comment|/* If the dock window is on the left side of the image window,        * move the docks to the left side. If the dock window is on the        * right side, move the docks to the right side of the image        * window.        */
+if|if
+condition|(
+name|gimp_ui_configurer_get_relative_window_pos
+argument_list|(
+name|GTK_WINDOW
+argument_list|(
+name|uber_image_window
+argument_list|)
+argument_list|,
+name|GTK_WINDOW
+argument_list|(
+name|dock_window
+argument_list|)
+argument_list|)
+operator|==
+name|GIMP_ALIGN_LEFT
+condition|)
+name|dock_columns
+operator|=
+name|gimp_image_window_get_left_docks
+argument_list|(
+name|uber_image_window
+argument_list|)
+expr_stmt|;
+else|else
+name|dock_columns
+operator|=
+name|gimp_image_window_get_right_docks
+argument_list|(
+name|uber_image_window
 argument_list|)
 expr_stmt|;
 name|dock_container
@@ -707,17 +865,6 @@ operator|->
 name|data
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|only_toolbox
-operator|&&
-operator|!
-name|GIMP_IS_TOOLBOX
-argument_list|(
-name|dock
-argument_list|)
-condition|)
-continue|continue;
 comment|/* Move the dock from the image window to the dock columns            * widget. Note that we need a ref while the dock is parentless            */
 name|g_object_ref
 argument_list|(
@@ -1422,18 +1569,6 @@ name|uber_image_window
 init|=
 name|NULL
 decl_stmt|;
-name|GimpDockColumns
-modifier|*
-name|left_docks
-init|=
-name|NULL
-decl_stmt|;
-name|GimpDockColumns
-modifier|*
-name|right_docks
-init|=
-name|NULL
-decl_stmt|;
 comment|/* Get and setup the window to put everything in */
 name|uber_image_window
 operator|=
@@ -1442,44 +1577,15 @@ argument_list|(
 name|ui_configurer
 argument_list|)
 expr_stmt|;
-comment|/* Get dock areas */
-name|left_docks
-operator|=
-name|gimp_image_window_get_left_docks
-argument_list|(
-name|uber_image_window
-argument_list|)
-expr_stmt|;
-name|right_docks
-operator|=
-name|gimp_image_window_get_right_docks
-argument_list|(
-name|uber_image_window
-argument_list|)
-expr_stmt|;
-comment|/* First move the toolbox to the left side of the image    * window    */
+comment|/* Mve docks to the left and right side of the image window */
 name|gimp_ui_configurer_move_docks_to_columns
 argument_list|(
 name|ui_configurer
 argument_list|,
-name|left_docks
-argument_list|,
-name|TRUE
-comment|/*only_toolbox*/
+name|uber_image_window
 argument_list|)
 expr_stmt|;
-comment|/* Then move the other docks to the right side of the image    * window    */
-name|gimp_ui_configurer_move_docks_to_columns
-argument_list|(
-name|ui_configurer
-argument_list|,
-name|right_docks
-argument_list|,
-name|FALSE
-comment|/*only_toolbox*/
-argument_list|)
-expr_stmt|;
-comment|/* Move stuff from other windows to the uber image window */
+comment|/* Move image shells from other windows to the uber image window */
 for|for
 control|(
 name|iter
