@@ -31,6 +31,8 @@ UI:
    no export target has been set yet
  - In single-window mode, add new dockable dialogs to the image window
    instead of in a new window
+ - When switching on single-window mode, put docks in the image window
+   depending on what side of the window they originally had
  - When switching off single-window mode, distribute dock windows
    better
  - Add a canvas item for the transform grid, fixing a major speed
